nosql-db-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    component: nosql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nosql-db
  template:
    metadata:
      labels:
        component: nosql-db
    spec:
      containers:
        - name: mongodb
          image: mongo:4
          ports:
            - name: mongodb-port
              containerPort: 27017
