api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    component: emart-api
  ports:
    - port: 5000
      targetPort: api-port
  type: ClusterIP
