client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    component: frontend
  ports:
    - port: 4200
      targetPort: client-port
  type: ClusterIP
