nosql-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    component: nosql-db
  ports:
    - port: 27017
      targetPort: mongodb-port
  type: ClusterIP
