webapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    component: emart-api
  ports:
    - port: 9000
      targetPort: webapi-port
  type: ClusterIP
